<resources>
    <string name="app_name">ezzk</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="cancel">cancel</string>
    <string name="continues">continue</string>
    <string name="error_url_address">error</string>
    <string name="alert_title">title</string>
    <string name="msg_exit_confirm">msg exit</string>
    <string name="signup">sign up</string>
    <string name="time_out_error">time out error</string>
    <string name="connection_error">connection error</string>
    <string name="package_installed">package not installed</string>
    <string name="check_phone">check phone</string>
    <string name="check_mail">check mail</string>
    <string name="error_video">error video</string>
    <string name="check_error">check error</string>
    <string name="check_pass">the password at least 6 characters</string>
    <string name="error_match">error match</string>
    <string name="copied">copied</string>
    <string name="user_name">name</string>
    <string name="password">password</string>
    <string name="forget_pass">forget password</string>
    <string name="login">login</string>
    <string name="dont_have_account">dont have account ?</string>
    <string name="subscribe">register</string>
    <string name="email_phone">email/phone</string>
    <string name="phone">phone</string>
    <string name="email">mail</string>
    <string name="confirm_password">confirm password</string>
    <string name="commercial_reg">commercial register (optional)</string>
    <string name="location">location</string>
    <string name="register">register</string>
    <string name="by_register_agree">by register you agree on</string>
    <string name="terms">terms and conditions</string>
    <string name="do_you_have_acc">do you have account ?</string>
    <string name="write_phone">please enter phone number to recieve verification code</string>
    <string name="send">send</string>
    <string name="please_select_pkg">please select package to complete registration</string>
    <string name="monthly_package">monthely package</string>
    <string name="subscription_price">subscribtion price :</string>
    <string name="rs">\u0020SAR\u0020</string>
    <string name="subscribe_">subscribe</string>
    <string name="half_year">6 months package</string>
    <string name="annually_sub">annually subscribtion</string>
    <string name="banking">banking transfer</string>
    <string name="msg_bank">you can pay by providing us with your bank info</string>
    <string name="transfer">you can transfer the amount on one of this banks</string>
    <string name="bank_name">bank name</string>
    <string name="bank_name_trasnfer">bank name transfered</string>
    <string name="account_owner">acount owner</string>
    <string name="account_number">account number</string>
    <string name="amount">amount</string>
    <string name="img_transfer_delv">transfer delivery image</string>
    <string name="pay">pay</string>
    <string name="forget_msg">please type your verification code</string>
    <string name="send_again">send again</string>
    <string name="confirm">confirm</string>
    <string name="accept">accept</string>
    <string name="error_connection">error connection</string>
    <string name="reload">reload</string>
    <string name="no_item">sorry no items</string>
    <string name="store_name">store name</string>
    <string name="store_desc">store description</string>
    <string name="product_time">product time</string>
    <string name="store_type">store type</string>
    <string name="hot_drinks">hot drinks</string>
    <string name="cold_drinks">cold drinks</string>
    <string name="choose_loc">choose your location</string>
    <string name="web_site">web site</string>
    <string name="work_times">work times</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="delevery_service">delivery service</string>
    <string name="delevery_cost">delivery cost</string>
    <string name="my_store">my store</string>
    <string name="current_orders">current orders</string>
    <string name="new_orders">new orders</string>
    <string name="delevery_exist">delivery exist</string>
    <string name="menu">menu</string>
    <string name="add_product">add product</string>
    <string name="product_name_ar">product name_ar</string>
    <string name="product_name_en">product name_en</string>
    <string name="price">price</string>
    <string name="large">large</string>
    <string name="meduim">medium</string>
    <string name="small">small</string>
    <string name="extras">extras</string>
    <string name="add">add</string>
    <string name="order_details">order details</string>
    <string name="address">address :\u0020</string>
    <string name="phone_">phone :\u0020</string>
    <string name="order_type">order type :\u0020</string>
    <string name="members">members :\u0020</string>
    <string name="date">date/time :\u0020</string>
    <string name="comment">comment :\u0020</string>
    <string name="delivery">delivery :\u0020</string>
    <string name="total">total :\u0020</string>
    <string name="refuse">refuse</string>
    <string name="number">amount :\u0020</string>
    <string name="account_number_">account number :\u0020</string>
    <string name="notifications">notifications</string>
    <string name="eban_num">eban number</string>
    <string name="profile">profile</string>
    <string name="edit">edit</string>
    <string name="address_">address</string>
    <string name="please_wait">please wait</string>
    <string name="ok">ok</string>
    <string name="gps_msg">please open GPS to detect location</string>
    <string name="alert">alert</string>
    <string name="attach_img">please attach bank receipt image transfer</string>
    <string name="start_time">start time</string>
    <string name="finish_time">finish time</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="cats">you should select one categorey at least</string>
    <string name="sorry_images">sorry you should have at least one image for your coffe</string>
    <string name="add_store">add store</string>
    <string name="select_location">please select location</string>
    <string name="select_start_time">select start time</string>
    <string name="select_end_time">select end time</string>
    <string name="validate_cats">you should select one category at least</string>
    <string name="validate_sizes">sorry you should select one size at least</string>
    <string name="image_drink_validate">please select drink image</string>
    <string name="product_type">product type</string>
    <string name="delete_conf_msg">
        <![CDATA[
         do you want remove "%s" from menu ?
    ]]>
    </string>
    <string name="agree">agree</string>
    <string name="edit_product">edit product</string>
    <string name="order_number">
        <![CDATA[
         order number "%s"
    ]]></string>
    <string name="order_owner">order owner :\u0020</string>
    <string name="size">size :\u0020</string>
    <string name="extras_">extras :\u0020</string>
    <string name="price_">price :\u0020</string>
    <string name="order_finished">order finished</string>
    <string name="prepairing">prepearing order</string>
    <string name="waiting_customer_payment_confirm">waiting customer payment confirm</string>
    <string name="pay_">payment :\u0020</string>
    <string name="payment_on_recieve">payment on recieve order</string>
    <string name="banking_payment">banking transfer</string>
    <string name="prepared_orders">current orders</string>
    <string name="main">main</string>
    <string name="contact_us">contact us</string>
    <string name="subscribtions">subscription</string>
    <string name="settings">settings</string>
    <string name="logout">logout</string>
    <string name="logout_msg">are you sure you want logout ?</string>
    <string name="language">language</string>
    <string name="arabic">العربية</string>
    <string name="english">english</string>
    <string name="choose">change language</string>
    <string name="subscribe_value">subscribtion value</string>
    <string name="package_type">
        <![CDATA[
         you are subscribed in  "%s"
    ]]></string>
    <string name="package_date">
        <![CDATA[
         the package ends in  "%s"
    ]]></string>
    <string name="change_sub">change package</string>
    <string name="renew_sub">recharge package</string>
    <string name="change_later_msg">you "can't" change your package till the package date finish\u0020</string>
    <string name="renew_later_msg">you "can't" recharge your package till the package date finish\u0020</string>
    <string name="save">save</string>
    <string name="saved_successfully">updated successfully</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="current_password">current password</string>
    <string name="new_password">new password</string>
    <string name="change">change</string>
    <string name="count_rate">
        <![CDATA[(%s)]]>
    </string>
    <string name="home">home</string>
    <string name="favs">favs</string>
    <string name="cart">cart</string>
    <string name="delivery_exist">delivery exist</string>
    <string name="km">KM</string>
    <string name="login_first">sorry you should login first</string>
    <string name="details">details</string>
    <string name="nearest_to_me">near by me</string>
    <string name="rate">rate</string>
    <string name="highest">the most rated</string>
    <string name="lowest">the lowest</string>
    <string name="search">search</string>
    <string name="no_search_res">no search result found</string>
    <string name="quantity">quantity</string>
    <string name="size_">the size</string>
    <string name="suger_addition">suger addition</string>
    <string name="another_additions">another additions</string>
    <string name="add_to_cart">add to cart</string>
    <string name="whole_total">total</string>
    <string name="pay_finish">pay and finish order</string>
    <string name="cont_shoping">continue shopping</string>
    <string name="order_now">order now</string>
    <string name="reserve_session">reserve a session</string>
    <string name="out_doors">outdoors</string>
    <string name="delivery_">delivery</string>
    <string name="take_away">take away</string>
    <string name="reservation_owner_name">reservation owner name</string>
    <string name="members_num">members number</string>
    <string name="date_">date and time</string>
    <string name="comment_">comment</string>
    <string name="reserve">reserve</string>
    <string name="msg_done">your order received successfully and confirm it soon</string>
    <string name="return_main">return main</string>
    <string name="time">time</string>
    <string name="next">next</string>
    <string name="share">share</string>
    <string name="sure">are you sure to sign out the stored data will clear ?</string>
    <string name="date_time">date</string>
    <string name="notes">notes</string>
    <string name="search_place">search place ...</string>
    <string name="nearest_by_places">nearest places</string>
    <string name="saved_places">saved places</string>
    <string name="try_other_price">try other way of price more cheaply (optional)</string>
    <string name="allow_offer">allow offer price</string>
    <string name="allow_share">allow share trip</string>
    <string name="obtain_price">invite friends to obtain</string>
    <string name="share_invite_msg">share invitaion code</string>
    <string name="price_invite"><![CDATA[
                    obtain %s
        ]]></string>
    <string name="copy">copy</string>
    <string name="continue_phone">continue using phone number</string>
    <string name="continue_face_btn">continue using facebook</string>
    <string name="or">or</string>
</resources>