<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".ui.activities.menu.ShareActivity">
<include
        layout="@layout/toolbar_normal"
        />
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/gift"
            android:tint="@android:color/black"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_large"
            />
    <TextView
            android:id="@+id/obtain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:gravity="center"
            android:fontFamily="@font/jf_flat_bold"
            android:textColor="@android:color/black"
            android:text="@string/price_invite"
            />
    <TextView
            android:id="@+id/obtain_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:gravity="center"
            android:fontFamily="@font/jf_flat_bold"
            android:text="@string/obtain_price"
            />
    <TextView
            android:id="@+id/share_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:textSize="@dimen/textsize1"
            android:fontFamily="@font/jf_flat_light"
            android:text="@string/share_invite_msg"
            />
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_gravity="center"
            >
    <EditText
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/invitation_drawable"
            android:padding="@dimen/padding_med"
            android:textSize="@dimen/textsize2"
            android:fontFamily="@font/jf_flat_semi"
            android:editable="false"
            />
    <EditText
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/invitation_drawable"
            android:padding="@dimen/padding_med"
            android:text="@string/copy"
            android:textSize="@dimen/textsize2"
            android:focusable="false"
            android:clickable="true"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/jf_flat_semi"


            />
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:textSize="@dimen/textsize1"
            android:fontFamily="@font/jf_flat_light"
            android:text="@string/share_invite_msg"
            />
    <LinearLayout
            android:id="@+id/share_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/invitation_drawable"
            android:gravity="center"

            android:layout_margin="@dimen/margin_large"
            >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:src="@drawable/share_menu" />
    <TextView
            android:id="@+id/more_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize2"
            android:text="@string/share"

            android:layout_margin="@dimen/margin_large"
            android:gravity="center"
            android:fontFamily="@font/jf_flat_semi"

            />
    </LinearLayout>
</LinearLayout>