<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/margin_normal"

>
    <com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       app:cardCornerRadius="@dimen/margin_normal"
        app:cardBackgroundColor="@android:color/white"
    >


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/colorAccent"
            >
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/logout"
                          android:textColor="@android:color/white"
                          android:textSize="@dimen/textsize2"
                          android:layout_centerInParent="true"
                />

            </RelativeLayout>
            <TextView
                    android:id="@+id/msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize2"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:text="@string/sure"
            />
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
            >
                <com.google.android.material.button.MaterialButton
                        android:id="@+id/ok_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:textColor="@android:color/white"
                        android:layout_margin="@dimen/margin_normal"
                        android:text="@string/ok"
                        android:fontFamily="@font/jf_flat_semi"
                        android:textSize="@dimen/textsize2"
                        android:layout_weight="1"
                        app:cornerRadius="@dimen/margin_normal"
                />
                <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancel_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/darker_gray"
                        android:textColor="@android:color/white"
                        android:text="@string/cancel"
                        android:layout_margin="@dimen/margin_normal"
                        android:textSize="@dimen/textsize2"
                        android:fontFamily="@font/jf_flat_semi"
                        android:layout_weight="1"
                        app:cornerRadius="@dimen/margin_normal"
                />
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
