<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin_normal"
            app:cardBackgroundColor="@android:color/white"
            android:layout_height="wrap_content"

            >

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin_normal"
                android:gravity="center"
                >
            <TextView
                    android:id="@+id/msg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/try_other_price"
                    android:fontFamily="@font/jf_flat_bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textsize2"
                    android:layout_weight="1"

                    />

        </LinearLayout>
        <RadioGroup
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:orientation="vertical">

            <RadioButton
                    android:id="@+id/offer_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jf_flat_semi"
                    android:text="@string/allow_offer"
                    android:textSize="@dimen/textsize2"

                    />

            <RadioButton
                    android:id="@+id/share_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jf_flat_semi"
                    android:text="@string/allow_share"
                    android:textSize="@dimen/textsize2"

                    />
        </RadioGroup>
</LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>