<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"

    tools:context=".ui.activities.splash.SplashActivity">
<ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"



/>ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash"
        android:scaleType="fitXY"



/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/logo_lay"
        >
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logoo"

        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_2xlarge"
        android:layout_below="@id/logo_lay"
        >
    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:textColor="@android:color/white"
        android:text="@string/continue_phone"
        android:fontFamily="@font/jf_flat_semi"
        />
    com.google.android.material.button.MaterialButton
        android:id="@+id/face_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#34363840"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/continue_face_btn"
        android:fontFamily="@font/jf_flat_semi"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:text="@string/or"
            android:fontFamily="@font/jf_flat_semi"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"

            />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/face_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:fontFamily="@font/jf_flat_semi"
            android:layout_marginBottom="@dimen/margin_normal"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"

            android:text="@string/continue_face_btn"

            android:textColor="@android:color/white"
             />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_large"

            />

    </LinearLayout>
</RelativeLayout>