<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activities.map.SearchPlacesActivity">
    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="@dimen/margin_large"
                        android:layout_marginBottom="@dimen/margin_large"
                        android:layout_marginLeft="56dp"
                        android:layout_marginRight="@dimen/margin_large"
                        android:background="@drawable/shape_rect"
                        android:padding="56dp"

                        >
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >
                        <fragment
                                android:id="@+id/autocomplete_fragment"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                                />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
                </FrameLayout>
                EditText
                        android:id="@+id/search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_rect"
                        android:layout_centerInParent="true"
                        android:padding="@dimen/padding_med"
                        android:hint="@string/search_place"
                        android:fontFamily="@font/jf_flat_semi"
                        android:textSize="@dimen/textsize2"
                        android:layout_margin="@dimen/margin_normal"
                        android:inputType="text"
                        />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
            android:id="@+id/search_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical"
            >
        <com.pnikosis.materialishprogress.ProgressWheel
                android:id="@+id/progress_wheel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:matProg_barColor="@color/colorAccent"
                app:matProg_barWidth="4dp"
                app:matProg_progressIndeterminate="true" />
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_search_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                />
        <TextView
                android:id="@+id/place_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_search_res"
                android:textSize="@dimen/textsize2"
                android:textColor="@color/colorAccent"
                />
    </LinearLayout>
    <TextView
            android:id="@+id/saved_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_places"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            />
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_saved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            />
<TextView
        android:id="@+id/near_by_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearest_by_places"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_normal"
        />
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_nears"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            />


</LinearLayout>